scroll completed and login popup completed

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Outfit';
+  scroll-behavior: smooth;
 }
 body{
   min-height: 100vh;
@@ -33,3 +34,4 @@ a{
   from { opacity: 0; }
   to { opacity: 1; }
 }
+
